<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <ImageView
        android:id="@+id/imageView_Detail_Banner"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/imageView_Detail_Banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_banner" />

    <ImageView
        android:id="@+id/imageView_Detail_Gambar"
        android:layout_width="140dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/imageView_Detail_Gambar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_Detail_Banner"
        app:srcCompat="@drawable/img_1" />

    <TextView
        android:id="@+id/textView_Detail_Header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/textView_Detail_Header"
        style="@style/textView_Header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView_Detail_Gambar"
        app:layout_constraintTop_toBottomOf="@+id/imageView_Detail_Banner" />

    <TextView
        android:id="@+id/textView_Detail_Desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/bio1"
        style="@style/textView_Desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView_Detail_Gambar"
        app:layout_constraintTop_toBottomOf="@+id/textView_Detail_Header" />

    <TextView
        android:id="@+id/textView_Detail_Role"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/role1"
        style="@style/textView_Role"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView_Detail_Gambar"
        app:layout_constraintTop_toBottomOf="@+id/textView_Detail_Desc" />

    <TextView
        android:id="@+id/textView_Detail_Rating"
        style="@style/textView_Header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/textView_Detail_Rating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView_Detail_Gambar"
        app:layout_constraintTop_toBottomOf="@+id/textView_Detail_Role" />

    <RatingBar
        android:id="@+id/ratingBar_Detail_Rating"
        style="@android:style/Widget.DeviceDefault.Light.RatingBar.Indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/imageView_Detail_Gambar"
        app:layout_constraintTop_toBottomOf="@+id/textView_Detail_Rating" />

</android.support.constraint.ConstraintLayout>