<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView_Template_Gambar"
        android:layout_width="140dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/imageView_Template_Gambar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_1" />

    <TextView
        android:id="@+id/textView_Template_Header"
        style="@style/textView_Header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/textView_Template_Header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView_Template_Gambar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Template_Desc"
        style="@style/textView_Desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/bio1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView_Template_Gambar"
        app:layout_constraintTop_toBottomOf="@+id/textView_Template_Header" />

    <TextView
        android:id="@+id/textView_Template_Role"
        style="@style/textView_Role"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/role1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView_Template_Gambar"
        app:layout_constraintTop_toBottomOf="@+id/textView_Template_Desc" />

    <RatingBar
        android:id="@+id/ratingBar_Template_Rating"
        style="@android:style/Widget.DeviceDefault.Light.RatingBar.Indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/imageView_Template_Gambar"
        app:layout_constraintTop_toBottomOf="@+id/textView_Template_Rating" />

    <TextView
        android:id="@+id/textView_Template_Rating"
        style="@style/textView_Header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/textView_Template_Rating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView_Template_Gambar"
        app:layout_constraintTop_toBottomOf="@+id/textView_Template_Role" />

</android.support.constraint.ConstraintLayout>